# foodpred

./: Dockerfile  README.md  TODO.md  lambda_function.py  pyproject.toml  requirements.txt  samconfig.toml  template.yaml
.github/actions/build-frontend/: action.yaml
.github/actions/deploy/: action.yaml
.github/actions/push-docker/: action.yaml
.github/workflows/: cd.yaml  ci.yaml  deploy-dev.yml  deploy-prod.yml  deploy.yaml  deploy.yml  testing.yaml
app/: _test_lambda.py  app.py  app_helpers.py  app_test.py  config.yaml  docker-build.sh  embeddings.npy  events.json  index.html  lci_data.yaml  main.css  raw.npy  requirements.txt  static.py
app/data/: data.py
app/model/: model.py
data/: ciqual_to_lci_name.yaml  jumbo_to_off_code.yaml
frontend/: .env.development  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: About.js  App.js  DebouncedCallback.js  EcoScorePieChart.js  index.css
harrygobert/: _legacy_build_data.py  _legacy_load_data.py  data.py  export.py  main.py  model.py  quantize.py  run_sweep.sh  sweep.yaml  train.py  util.py
harrygobert/model/: model.py
terraform/: api.tf  api_dns.tf  dns.tf  ecr.tf  lambda.tf  main.tf  outputs.tf  provider.tf  variables.tf  website.tf  website_dns.tf
terraform/vars/: dev.tfvars  prod.tfvars
tests/: test.csv  test_data.py  test_model.py
website/: about.html  index.html
website/harrygobert/: .env.production  package.json
website/harrygobert/src/: About.js  App.js  Navigation.js
