[tool.poetry]
name = "harrygobert"
version = "0.0.0"
description = ""
authors = ["Bas Krahmer <baskrahmer@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
harrygobert = "harrygobert.main:main"


[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
