[tool.poetry]
name = "harrygobert"
version = "0.0.0"
description = ""
authors = ["Bas Krahmer <baskrahmer@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
harrygobert = "harrygobert.train:main"

[tool.poetry.dependencies]
python = "^3.9"
certifi = "2022.12.7"
charset-normalizer = "3.1.0"
coloredlogs = "15.0.1"
exceptiongroup = "1.1.1"
filelock = "3.12.0"
flatbuffers = "23.3.3"
fsspec = "2023.4.0"
huggingface-hub = "0.14.1"
humanfriendly = "10.0"
idna = "3.4"
iniconfig = "2.0.0"
Jinja2 = "3.1.2"
MarkupSafe = "2.1.2"
mpmath = "1.3.0"
networkx = "3.1"
numpy = "1.24.3"
onnxruntime = "1.14.1"
packaging = "23.1"
pluggy = "1.0.0"
protobuf = ">=3.20.2,<4"
pytest = "7.3.1"
PyYAML = "6.0"
regex = "2023.5.2"
requests = "2.29.0"
sympy = "1.11.1"
tokenizers = "0.13.3"
tomli = "2.0.1"
tqdm = "4.65.0"
transformers = "4.28.1"
typing-extensions = "4.5.0"
urllib3 = "1.26.15"
pandas = "^2.0.1"
torch = "^2.0.0"
lightning = "^2.0.2"
scikit-learn = "^1.2.2"
wandb = "^0.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
